# pm3-mcp

./: .gitignore  CLAUDE.md  LICENSE  README.md  pyproject.toml
src/pm3_mcp/: __init__.py  __main__.py  connection.py  parsers.py  safety.py  server.py  tools.py
tests/: conftest.py  test_connection.py  test_parsers.py  test_safety.py  test_server_dispatch.py  test_tools.py
