[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pm3-mcp"
version = "0.1.0"
description = "MCP server for Proxmark3 RFID/NFC tag identification and reading"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
]

# The pm3 (proxmark3) client is a system dependency resolved via PATH.
# Build from source: https://github.com/RfidResearchGroup/proxmark3

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
markers = [
    "proxmark3: requires Proxmark3 hardware",
]
